# aksrt-api

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
migrations/: 001_initial.sql  002_remove_smtp_replyto_and_notify.sql  003_comment_geoip.sql
scripts/: build-api-image.ps1  build-api-image.sh
src/: db.rs  main.rs
