[package]
name = "aksrtblog-rust-api"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.9", features = ["multipart"] }
base64 = "0.22"
chrono = { version = "0.4.39", features = ["serde"] }
deadpool-postgres = { version = "0.14", features = ["serde"] }
dotenvy = "0.15.7"
hmac = "0.13.0-rc.3"
jsonwebtoken = "9.3.1"
lettre = "0.11"
md5 = "0.7.0"
postgres = { version = "0.19.10", features = ["with-chrono-0_4", "with-uuid-1", "with-serde_json-1"] }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.135"
sha1 = "0.11.0-rc.3"
sha2 = "0.11.0-rc.3"
tokio = { version = "1.43.0", features = ["full"] }
tower-http = { version = "0.6.2", features = ["cors", "fs", "trace"] }
uuid = { version = "1.11.0", features = ["v4", "serde"] }

[[bin]]
name = "aksrtblog-rust-api"
path = "src/main.rs"
